// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should validate JSX without errors 1`] = `
Object {
  "errorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "results": Array [
    Object {
      "errorCount": 0,
      "filePath": "tests/fixtures/component.fixture.jsx",
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": Array [],
      "warningCount": 0,
    },
  ],
  "warningCount": 0,
}
`;

exports[`should validate SFC without errors 1`] = `
Object {
  "errorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "results": Array [],
  "warningCount": 0,
}
`;
